--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
 	"description": "A Web-Based, Open-Source, Extendible Platform for Creating Custom Solar System Simulations",
 	"main": "index.js",
 	"scripts": {
-		"test": "mocha"
+		"test": "grunt test"
 	},
+	"repository": "https://github.com/mooeypoo/AstroSimulator",
+	"bugs": "https://github.com/mooeypoo/AstroSimulator/issues",
+	"license": "GPL-3.0",
 	"keywords": [
 		"astronomy",
 		"simulation",
@@ -17,7 +20,6 @@
 		"email": "mooeypoo@gmail.com",
 		"url": "http://moriel.smarterthanthat.com"
 	},
-	"license": "GPL-3.0",
 	"devDependencies": {
 		"chai": "^4.1.2",
 		"mocha": "^5.0.1",
@@ -25,6 +27,7 @@
 		"stylelint": "8.2.0",
 		"eslint-config-wikimedia": "^0.5.0",
 		"stylelint-config-wikimedia": "0.4.2",
+		"grunt-mocha-test": "^0.13.3",
 		"grunt-contrib-watch": "1.0.0",
 		"grunt-eslint": "20.1.0",
 		"grunt-stylelint": "0.9.0"
