--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 language: node_js
 node_js:
   - "6"
-  - "6.9.1"
 before_script:
   - npm install grunt-cli -g
+after_success:
+- npm run coveralls
